feat: campaigns module (list, create, details shell)

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="7" height="7" rx="1"/><rect x="14" y="3" width="7" height="7" rx="1"/><rect x="3" y="14" width="7" height="7" rx="1"/><rect x="14" y="14" width="7" height="7" rx="1"/></svg>
           <span>Dashboard</span>
         </a>
-        <a href="#campaigns" class="nav-item" id="nav-campaigns">
+        <a href="/campaigns.html" class="nav-item" id="nav-campaigns">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M22 12h-4l-3 9L9 3l-3 9H2"/></svg>
           <span>Campaigns</span>
         </a>
