--- a/login.html
+++ b/login.html
@@ -29,27 +29,7 @@
         <div class="login-branding">
           <div class="brand-content">
             <div class="brand-logo">
-              <svg width="48" height="48" viewBox="0 0 48 48" fill="none">
-                <rect width="48" height="48" rx="12" fill="url(#logo-grad)" />
-                <path
-                  d="M14 16h20v3H14zm0 6.5h14v3H14zm0 6.5h18v3H14z"
-                  fill="white"
-                  opacity="0.9"
-                />
-                <path
-                  d="M34 28l4 4-4 4"
-                  stroke="white"
-                  stroke-width="2.5"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-                <defs>
-                  <linearGradient id="logo-grad" x1="0" y1="0" x2="48" y2="48">
-                    <stop stop-color="#6366f1" />
-                    <stop offset="1" stop-color="#8b5cf6" />
-                  </linearGradient>
-                </defs>
-              </svg>
+              <img src="/Layer_1.png" alt="TXB UniBox Logo" class="brand-logo-img">
             </div>
             <h1 class="brand-title">TXB UniBox</h1>
             <p class="brand-subtitle">Cold Outreach CRM</p>
