--- a/login.html
+++ b/login.html
@@ -14,6 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/png" href="/Layer_1.png" />
     <link rel="stylesheet" href="/src/styles/login.css" />
   </head>
   <body>
