feat(analytics): rebuild analytics dashboard UI and fix layout width

--- a/campaign.html
+++ b/campaign.html
@@ -61,7 +61,7 @@
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2z"/><path d="M12 6v6l4 2"/></svg>
           <span>Warmup</span>
         </a>
-        <a href="#analytics" class="nav-item" id="nav-analytics">
+        <a href="/analytics.html" class="nav-item" id="nav-analytics">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M18 20V10"/><path d="M12 20V4"/><path d="M6 20v-6"/></svg>
           <span>Analytics</span>
         </a>
