--- a/unibox.html
+++ b/unibox.html
@@ -62,7 +62,7 @@
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2z"/><path d="M12 6v6l4 2"/></svg>
           <span>Warmup</span>
         </a>
-        <a href="#analytics" class="nav-item" id="nav-analytics">
+        <a href="/analytics.html" class="nav-item" id="nav-analytics">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M18 20V10"/><path d="M12 20V4"/><path d="M6 20v-6"/></svg>
           <span>Analytics</span>
         </a>
@@ -225,8 +225,14 @@
               <div class="loading-spinner-small"></div>
             </div>
           </div>
-          <div class="thread-list-footer">
-            <button class="btn-load-more">Load more</button>
+          <div class="thread-list-footer unibox-pagination" id="unibox-pagination" style="display: none;">
+            <button class="btn-page" id="btn-prev-page" disabled title="Previous Page">
+               <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="m15 18-6-6 6-6"/></svg>
+            </button>
+            <span class="page-info" id="page-info">Page 1</span>
+            <button class="btn-page" id="btn-next-page" disabled title="Next Page">
+               <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="m9 18 6-6-6-6"/></svg>
+            </button>
           </div>
         </section>
 
